--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@carlthelooperr/tea-time",
+  "name": "@carlthelooper/tea-time",
   "version": "1.0.0",
   "description": "Tea time for tea.xyz",
   "main": "main.js",
